--- a/src/app/acceptance/main.module.css
+++ b/src/app/acceptance/main.module.css
@@ -3,7 +3,7 @@
   left:0;
   z-index:0;
   opacity: 35%;
-  background-image:url("https://uh.edu/landing-page-images/page-header-campus-life.jpg");
+  background-image:url("https://images.unsplash.com/photo-1520545221203-f6ca6a8e3252?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   width:100vw;
   height:100vh;
 }
