--- a/src/app/disability/main.module.css
+++ b/src/app/disability/main.module.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  
 }
 
 .side_bar{
@@ -85,7 +86,7 @@
 .input_combo, .input_text, .input_button {
   width: 80%;
   padding: 20px;
-  border: 1px solid #c3dff5;
+  border: 1px solid #0055ff;
   margin: auto;
   margin-bottom: 20px; /* Unified styling */
   color: black;
@@ -106,7 +107,7 @@
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #002fff;
 }
 
 .header, .footer {
