--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -7,6 +7,7 @@
   width:100vw;
   height:100vh;
 }
+
 .container{
   min-height: 100vh;
   display: flex;
@@ -19,8 +20,8 @@
   flex-direction:column;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.77);
-  flex:3;
   z-index:2;
+  width:380px;
 }
 
 .main_content{
